fix new note button visibility on initialization

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,3 @@ body {
     background-color: black;
     opacity: .4;
 }
-
-.new-to-do-button {
-    visibility: hidden;
-}
